feat: Init refactor in the api documentation
